--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
+
+    implementation 'com.facebook.fresco:fresco:2.3.0'
+    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
+
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.12'
